# kek-minion

./: README.md  replit_zip_error_log.txt
.upm/: store.json
Old Code/: main2.py  music.py  old music code.txt
Old Code/kekminion/: main.py  mainold  pyproject.toml
Old Code/kekminion/.upm/: store.json
Old Code/kekminion_1.1/: main  main.py  music_cog.py
Old Code/kekminion_1.1/.upm/: store.json
Old Code/kekminion_1.4/: keep_alive.py  main.py  package-lock.json  pyproject.toml
Old Code/kekminion_1.4/.upm/: store.json
Old Code/kekminion_1.4/cogs/: fun.py  info.py  music.py  utilities.py
Old Code/kekminion_1.5/: file.mov  keep_alive.py  main.py
Old Code/kekminion_1.5/.upm/: store.json
Old Code/kekminion_1.5/cogs/: info.py  music.py  utilities.py
Old Code/kekminion_1.6/cogs/: fun.py  music.py  utilities.py
Old Code/kekminion_1.7/: main.py
Old Code/kekminion_1.7/cogs/: fun.py  info.py  music.py  utilities.py
