[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "toughmistyloaderprogram"
version = "0.1.0"
[tool.poetry.dependencies]
PyNaCl = "^1.3"
discord = "^1.0"
python = "^3.8"
youtube_dl = "^2021.12.17"
yt-dlp = "^2022.11.11"
django-tango = "^0.10.0"
creds = "^1.0.15"
Wand = "^0.6.11"
deeppyer = "^1.0.1"
converters = "^0.0.1"
validators = "^0.20.0"
pyfiglet = "^0.8.post1"
pil-compat = "^1.0.0"
python-dotenv = "^1.0.0"
Flask = "^2.2.3"
[tool.poetry.dev-dependencies]
